[tool.poetry]
name = "usitest-proj"
version = "0.1.0"
description = ""
authors = ["Kusto7 <kirill.kustov21@gmail.com>"]
readme = "README.md"
packages = [{include = "usitest_proj"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
